--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         </span>
                                     </div>
 
-                                    <span ng-if="showError" style="color: red"> Veuillez saisir un médecin ou un centre ou remplir la forumulaire de recherche avancée</span>
+                                    <span ng-if="showError" style="color: red"> Veuillez saisir un médecin, un centre ou une adresse</span>
 
                                     <div class="form-group specialite">
 
