add connection service

--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 </div>
 
 <div id="SearchContentPanel" class="col-md-8">
-    <div ng-include="'/includes/index-schedule.html'" ng-if="introSection == 'schedule'"></div>
+    <div ng-include="'/includes/index-schedule.html'" ng-if="introSection == 'schedule'">
+    
+    </div>
     <div id="carousel-example-generic" class="carousel slide carousel-fade" ng-if="introSection == 'slider'">
         <!-- Indicators -->
         <ol class="carousel-indicators">
