--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
     <script src="app/patient.module/patient.module.js"></script>
     <script src="app/patient.module/components/patientprofile.component.js"></script>
     <script src="app/patient.module/components/patient.component.js"></script>
+    <script src="app/patient.module/components/patientdoctors.component.js"></script>
+    <script src="app/patient.module/components/relatives.component.js"></script>
+    <script src="app/patient.module/components/proposing.component.js"></script>
+    <script src="app/patient.module/components/patientappointments.component.js"></script>
 
 
 
